??? ???  ? ??:??:?? UTC 2007

        0.37 release.

        Bugs fixed

        - mtn automate heads called without a branch argument now properly
          returns the head revisions of the workspace's branch if called
          over mtn automate stdio

        Other

        - contrib/usher.cc has been removed. Please use the
          net.venge.monotone.contrib.usher branch instead.

        Internal

        - Update SQLite to 3.4.1.

        - Update Lua to 5.1.2 plus latest bug fixes.



Fri Aug  3 06:08:36 UTC 2007

        0.36 release.

        Changes

        - The help command is now able to show documentation on subcommands
          (such as 'attr set').

        - The help command now shows a brief abstract of each command,
          instead of only listing their names.

        - The command `list changed` now outputs the new path of any
          renamed item making it easier to copy and paste these paths
          for external program usage.

        - `automate attributes` has been renamed to `automate get_attributes`,
          also a bug has been fixed there so resurrected attributes are now
          properly outputted as "new" and not "changed".

        New features

        - Two new commands to set and drop attributes over automate:
          `automate set_attribute` and `automate drop_attribute`

        - There is a new function available to the lua hooks,
          'server_request_sync(what, address, include, exclude)', which will
          initate a netsync connection to the server at "address", with the
          given include and exclude patterns, and will sync, push, or pull,
          as given in the "what" argument. If called from a monotone instance
          which is not acting as a server, this function will do nothing.

        - There is a new hook available,
          'get_netsync_key(server, include, exclude)', which is called to
          determine which key to use for netsync operations. Note that the